feat(loan): details
